--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <script>
       src = "https://kit.fontawesome.com/d8de2d9986.js";
     </script>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -42,5 +43,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script
+      src="https://widget.cloudinary.com/v2.0/global/all.js"
+      type="text/javascript"
+    ></script>
   </body>
 </html>
